# pro-se

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
src/: main.rs
src/camera/: clip.rs  def.rs  mod.rs  pool.rs
src/control/: mod.rs
src/environment/: mod.rs
src/environment/portal/: def.rs  mod.rs  physics.rs  render.rs  vision.rs  vision_duplication.rs
src/gfx/: mod.rs  pixelization.rs
src/math/: mod.rs  plane.rs  transform.rs
src/render/: mod.rs
src/render/atlas/: mod.rs  page.rs  region.rs
src/render/painter/: context.rs  mod.rs  pipeline.rs  vertex.rs
