[package]
name = "pro-se"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_enhanced_input = "0.25"
bevy_transform_interpolation = "0.4"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
mimalloc-redirect = "*"
tracing = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

[dependencies.avian3d]
version = "0.6"
#git = "https://github.com/Jondolf/avian.git"
default-features = false
features = [
    "3d",
    "f32",
    "parry-f32",
    "xpbd_joints",
    "parallel",
    "bevy_scene",
    "bevy_picking",
    "simd",
]

[dependencies.bevy]
version = "0.18"
default-features = false
features = [
    "default_app",
    "default_platform",
    "3d_bevy_render",
    "scene",
    "picking",
    "ui",
]

[features]
default = ["dev"]
dev = ["avian3d/debug-plugin", "bevy/dev"]
